--- a/app.json
+++ b/app.json
@@ -18,10 +18,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.vitorantonio.authfirebasevitoraula1"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5fdf708f-ebd2-4823-80d0-3b13387ed59c"
+      }
     }
   }
 }
